add_subdirectory(Utils)
add_subdirectory(Instrumentation)
add_subdirectory(AggressiveInstCombine)
add_subdirectory(InstCombine)
add_subdirectory(Scalar)
add_subdirectory(IPO)
add_subdirectory(Vectorize)
add_subdirectory(Hello)
add_subdirectory(HelloNew)
add_subdirectory(ObjCARC)
add_subdirectory(Coroutines)
add_subdirectory(CFGuard)
add_subdirectory(CryptoUtils)
add_subdirectory(SplitBasicBlocks)
add_subdirectory(BogusControlFlow)
add_subdirectory(Flattening)
add_subdirectory(IndirectBranch)
add_subdirectory(Substitution)
add_subdirectory(FunctionWrapper)
add_subdirectory(StringEncryption)
add_subdirectory(AntiClassDump)
add_subdirectory(FunctionCallObfuscate)
