add_subdirectory(CryptoUtils)
add_subdirectory(AntiClassDump)
add_subdirectory(BogusControlFlow)
add_subdirectory(Flattening)
add_subdirectory(FunctionCallObfuscate)
add_subdirectory(FunctionWrapper)
add_subdirectory(IndirectBranch)
add_subdirectory(SplitBasicBlocks)
add_subdirectory(StringEncryption)
add_subdirectory(Substitution)